--- a/Simulare cursa karting/Simulare cursa karting/Simulare cursa karting.vcxproj
+++ b/Simulare cursa karting/Simulare cursa karting/Simulare cursa karting.vcxproj
@@ -133,9 +133,11 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Shader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
