--- a/Simulare cursa karting/Simulare cursa karting/Simulare cursa karting.vcxproj.filters
+++ b/Simulare cursa karting/Simulare cursa karting/Simulare cursa karting.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Shader">
+      <UniqueIdentifier>{2fded0ab-6a85-4155-b8fd-4cf5005f4523}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -22,6 +25,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcessInput.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,5 +41,28 @@
     <ClInclude Include="ShaderSource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Material.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ProcessInput.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Basic.shader">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="Blending.shader">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="Map.shader">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="Skybox.shader">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="Texture.shader">
+      <Filter>Shader</Filter>
+    </None>
   </ItemGroup>
 </Project>
