--- a/Simulare cursa karting/Simulare cursa karting/Simulare cursa karting.vcxproj.filters
+++ b/Simulare cursa karting/Simulare cursa karting/Simulare cursa karting.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ProcessInput.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Skybox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ProcessInput.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Skybox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
