--- a/Simulare cursa karting/Simulare cursa karting/Simulare cursa karting.vcxproj
+++ b/Simulare cursa karting/Simulare cursa karting/Simulare cursa karting.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="ProcessInput.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Skybox.cpp" />
+    <ClCompile Include="Terrain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
@@ -144,6 +145,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderSource.h" />
     <ClInclude Include="Skybox.h" />
+    <ClInclude Include="Terrain.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Basic.shader" />
