Implementarea clasex TextureLoader si a Vertex-ului

--- a/Simulare cursa karting/Simulare cursa karting/Simulare cursa karting.vcxproj
+++ b/Simulare cursa karting/Simulare cursa karting/Simulare cursa karting.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="Terrain.cpp" />
+    <ClCompile Include="TextureLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
@@ -146,6 +147,8 @@
     <ClInclude Include="ShaderSource.h" />
     <ClInclude Include="Skybox.h" />
     <ClInclude Include="Terrain.h" />
+    <ClInclude Include="TextureLoader.h" />
+    <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Basic.shader" />
